--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,6 @@ dist
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .DS_Store
+India_test_case_generation/output_with_dsl_20251120_123316/Verification/
+India_test_case_generation/verification_20251120_153114/
+India_test_case_generation/verification_*/
